--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "foundation-sites-template",
   "version": "1.0.0",
   "description": "Basic template for a new Foundation for Sites project.",
-  "main": "gulpfile.js",
+  "main": "app.js",
   "scripts": {
-    "start": "gulp",
+    "start": "node app",
     "build": "gulp sass"
   },
   "author": "ZURB <foundation@zurb.com>",
